add translation, refactor themeSerivices

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,6 @@
 <div class="padding-4">
+  <h1>{{ 'title' | translate }}</h1>
+  <hr />
   <app-change-theme></app-change-theme>
+  <app-change-language></app-change-language>
 </div>
