--- a/src/app/shared/components/change-theme/change-theme.component.html
+++ b/src/app/shared/components/change-theme/change-theme.component.html
@@ -1,5 +1,5 @@
 <select
-  [(ngModel)]="selectedTheme"
+  [ngModel]="selectedTheme$ | async"
   (ngModelChange)="onChange($event)"
   data-qa="select-theme">
   <option [value]="'light'">Light</option>
