--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -1,3 +1,10 @@
 .padding-4 {
     padding: 4rem;
 }
+.d-flex {
+    display: flex;
+    align-items: center;
+}
+.flex-grow-1 {
+    flex-grow: 1;
+}
